Fix z-index bugs

--- a/resources/css/header.pcss
+++ b/resources/css/header.pcss
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 10;
+  z-index: 4;
   background: var(--background-white);
 }
 
@@ -56,6 +56,10 @@
 .link--with-image,
 .link__image {
   display: block;
+}
+
+.overlay--active {
+  z-index: 10;
 }
 
 @media screen and (min-width: 37.5em) {
