--- a/resources/css/panels.pcss
+++ b/resources/css/panels.pcss
@@ -9,7 +9,7 @@
   position: -webkit-sticky;
   position: sticky;
   top: 0;
-  z-index: 4;
+  z-index: 5;
 }
 
 .panel--right {
